--- a/GGL_LensCats/README
+++ b/GGL_LensCats/README
@@ -22,12 +22,13 @@ wget https://data.sdss.org/sas/dr12/boss/lss/random1_DR12v5_CMASSLOWZTOT_North.f
 http://2dflens.swin.edu.au
 click on "data release" -- the 6 catalogues under "data generated in final BOSS redshift binning"
 
-wget http://2dflens.swin.edu.au/data_2dfbz1_kidss.tar.gz
-wget http://2dflens.swin.edu.au/data_2dfbz1_kidsn.tar.gz
-wget http://2dflens.swin.edu.au/data_2dfbz2_kidss.tar.gz
-wget http://2dflens.swin.edu.au/data_2dfbz2_kidsn.tar.gz
-wget http://2dflens.swin.edu.au/data_2dfbz3_kidss.tar.gz
-wget http://2dflens.swin.edu.au/data_2dfbz3_kidsn.tar.gz
+(Updated Dec 2019)
+wget http://2dflens.swin.edu.au/data_2dfbz1_kidss_160105_rat.tar.gz
+wget http://2dflens.swin.edu.au/data_2dfbz1_kidsn_160105_rat.tar.gz
+wget http://2dflens.swin.edu.au/data_2dfbz2_kidss_160105_rat.tar.gz
+wget http://2dflens.swin.edu.au/data_2dfbz2_kidsn_160105_rat.tar.gz
+wget http://2dflens.swin.edu.au/data_2dfbz3_kidss_160105_rat.tar.gz
+wget http://2dflens.swin.edu.au/data_2dfbz3_kidsn_160105_rat.tar.gz
 
 - The KiDS-S and N photometry catalogues you produced, they are currently called 
 kids1000_N_col.fits and kids1000_S_col.fits
