--- a/Shear_Ratio_Test/README
+++ b/Shear_Ratio_Test/README
@@ -1,5 +1,35 @@
 21/10/2020: codes written by H. Hildebrandt & B. Giblin, hacked by B.Giblin and C.Heymans.
 
+0. Get_Input.py:
+This contains a python class used to read & return the information contained in an parameter file.
+The parameter file specifies information like the lens and source samples to be used in the shear-ratio test,
+e.g. whether they are simulated or actual KiDS data, and whether the n(z)'s used in the modelling have been subjected
+to mean shifts, or artificially injected with high-z outliers (we experimented with such things to see if the shear-ratio
+test, SRT, could statistically detect such things).
+
+Depending on if you are running the SRT on MICE simulations or KiDS data, different information needs to be specified.
+e.g., for MICE simulations, and example parameter file might look like this:
+Source_Type = MICE2_KV450       # specify KV450-like MICE-simulated sources
+Lens_Type = MICE2_BOSS          # specify BOSS-like MICE-sim lenses
+Random_Type = MICE2_BOSS_random # BOSS-like MICE-sim randoms
+Mag_OnOff = off                 # switch the magnification on/off in the mocks
+Pz_TrueEstimated = True         # Use the True n(z) or the Estimated n(z)
+SN = False                      # Did the source galaxies have intrinsic shape noise or not.
+
+Alternatively, for a KiDS-data analysis, the input parameter file might look like this:
+Source_Type = K1000             # KiDS-1000 sources
+Lens_Type = BOSS_data           # BOSS lenses (could set to GAMA_data alternatively)
+Random_Type = BOSS_random       # BOSS randoms (could set to GAMA_random alternatively)
+Blind = C                       # The KiDS Blind ID (A/B/C) 
+SOMFLAGNAME = Fid               # Which SOM version does the n(z) correspond to (Fid/noDEEP2 - see Hildebrandt+20 for more info).
+OL_Tag = _OutlierPeaksInBins12  # If blank, it's just the estimated n(z). One the other hand...
+                                # ... _OutlierPeaksInBins12 means artificial peaks at z=1.4 were added to reshift bins 1 and 2.
+
+More on these arguments below.
+Get_Input.py is used to read in arguments by a number of the Python codes listed here.
+
+Many example parameter files can be found in param_files/*.dat
+
 1. create_tomocats_GGL.py:
 For the shear ratio test we need finer lens bins than normal so we have a special script to create these
 
@@ -12,7 +42,6 @@ For the shear ratio test we need finer lens bins than normal so we have a specia
 Calculate the gamma_t measurement between source and lens samples specified in the input parameter file.
 It also	calculates the predictions for the covariance of the gamma_t via different methods
 (in Giblin+2020 we use spin-shear realisations).	
-The TreeCorr memory leak should	now be fixed.
  Arguments:
  - Cov_Method: option to change	the covariance being calculated	from multiple spun-shear realistions
    to instead read in the octant-sized MICE simulation and split this into n patches (with n~16).
@@ -35,12 +64,44 @@ Once the data is assembled the main shear ratio test is done in
 
 5. GGL_shear_ratio_test_zall.py  -
 This makes Figure 11 of Giblin et al. (2020).
+It does this by reading in the gamma_t^ij measurements corresponding to the i'th/j'th lens/source bin pairs,
+reading in the covariance produced by calc_spin_test_cov.py,
+reading in the Dls/Ds luminosity distance ratios (ls=lens-to-source, s=source) prouced by Dls_over_Ds.py,
+and it fits a model given by eqns 18 and 19 of Giblin et al. (2020).
+The model has one free amplitude parameter per lens bin.
+On top of this, there's loads of extra options you can toggle. These include:
+- Include_mCov (True/False)            # Include the uncertainty due to the m-correction
+- Include_mBias (True/False)           # If True, read in and bias the gamma_t by *(1 + m + f_mBias * m_err)   
+                                       # where f_mBias, the level of bias to apply, can be set in the code).
+- Include_Hartlap (True/False)         # Inflate the covariance by the Hartlap scaling factor, to account for noise in taking inverse.
+- Include_Magnification (True/False)   # If True, include extra param in gamma_t model: strength of magnifcation effect on gt.
+- Include_IA = True                    # If True, read in the kcap prediction for the IA-only <g_t> and inflate the cov diag by
+- f_IA = 0                             # +(f_IA* gt_IA)^2 ; f_IA is our uncert. on IA amplitude.
+- A_IA = 1                             # A_IA*gt_IA is added to the fitted model if Include_IA is True. 
 
-this needs some input data however from...
+- nofz_shift="_ModnofzUpDown"          # Only for K1000: use the Dls/Ds values for the nofz which has been
+                                       # shifted up ('_nofzUp'), down ('_nofzDown') by +/-(delta_z+delta_z_err)
+				       # OR 5sig shift-up ('_nofzUp5sig'), down ('_nofzDown5sig') by (+/- 5*delta_z_err)
+				       # "_nofzMix5sig" means alternate bins are shifted up/down by (+/- 5*delta_z_err).
+				       # For no shift, set to ''.
+				       # Finally, to include the uncert. on the nofz's in the SRT modelling,
+				       # set nofz_shift to "_ModnofzUpDown"
+- Cov_Method="Spin"/"Patch"            # Spin means the cov was calculated from many gamma_t realisations
+                                       # with the source galaxy ellipticities randomised.
+				       # "Patch" means the cov came from the MICE octant-sized simulation, split into ~16 patches.
 
-6. Dls_over_Ds.py: which calculates a bunch of different shear ratios for a fixed cosmology (using cosmology.py)
+GGL_shear_ratio_test_zall.py gets its input data from the following codes:
+
+6. Dls_over_Ds.py: which calculates the luminoisty distance ratios, needed for our gamma_t model
+in GGL_shear_ratio_test_zall.py, for a fixed cosmology (using cosmology.py).
+If a third argument, e.g. "_nofzUpp" or "_nofzDown", is inputted, then all of the n(z)'s will be systematically
+shifted up or down by +/-(delta_z+delta_z_err), where delta_z(_err) are given in Table 1 of Giblin et al. (2020).
+This third argument follows the same rules as nofz_shift defined above.
+
+
 
 7. run_Dls_over_Ds.sh: is the master script that creates the Dls/Ds files
+All of the input arguments (i.e. lens/source samples, n(z) shifts etc.) are set within this code.
 
 8. Compare_BFParams_And_Models.py
    This code was used to read in the best-fit gamma_t model and corresponding B_ij model parameters (eqn 18 Giblin+2020)
@@ -55,7 +116,6 @@ this needs some input data however from...
    The results of these tests are discussed to some extent in Sect. 4.3.2 of Giblin+2020.
    Concluded that the SRT is highly insensitive to these calibration errors given the statistical power of Stage-III surveys,
    especially when IA-uncertainty is included.
-   Conclusion: SRT is not a very good test.
 
 9. Make_MockMagnifiedgt.py
   This was used to artificially add a magnification contribution to a mock gamma_t, with a free parameter per lens bin,
